# tarpaulin

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-nightly  Dockerfile-nightly-slim  Dockerfile-slim  LICENSE-APACHE  LICENSE-MIT  README.md  TROUBLESHOOTING.md  build.rs  dependabot.yml  tarpaulin.toml  travis-install.sh
.cargo/: config
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docker.yml  release.yml  rust.yml
ci/: before_deploy.sh  trigger_docker_build.sh
data/simple_project/src/: lib.rs  unused.rs
data/test_links/src/: depend.rs
data/untested_bin/: Cargo.toml
data/untested_bin/src/: main.rs
design/: approach.md
src/: args.rs  breakpoint.rs  cargo.rs  collectors.rs  config.rs  event_log.rs  inferior_state.rs  lib.rs  main.rs  path_utils.rs  personality.rs  ptrace_control.rs  source_analysis.rs  statemachine.rs  test_loader.rs  tracer.rs  traces.rs
src/branching/: mod.rs
src/cargo/: config_file.rs  mod.rs
src/config/: coveralls.rs  mod.rs  parse.rs  types.rs
src/errors/: mod.rs
src/process_handling/: breakpoint.rs  event_source.rs  linux.rs  mac.rs  mock_event_source.rs  mod.rs  ptrace_control.rs
src/report/: .prettierignore  .prettierrc  cobertura.rs  coveralls.rs  html.rs  info.rs  json.rs  lcov.rs  markdown.rs  mod.rs  report_viewer.css  report_viewer.js  safe_json.rs
src/source_analysis/: attributes.rs  expressions.rs  items.rs  macros.rs  mod.rs  statements.rs  tests.rs
src/statemachine/: instrumented.rs  linux.rs  mod.rs
tests/: array_coverage.rs  compile_fail.rs  doc_coverage.rs  failure_thresholds.rs  failures.rs  line_coverage.rs  mod.rs  reports.rs  test_types.rs  utils.rs  workspaces.rs
tests/data/: tarpaulin.toml
tests/data/HttptestAndReqwest/: .gitignore  Cargo.toml
tests/data/HttptestAndReqwest/src/: main.rs
tests/data/all_test_types/: .gitignore  Cargo.toml
tests/data/all_test_types/benches/: bench_fn.rs
tests/data/all_test_types/examples/: example_test.rs
tests/data/all_test_types/src/: lib.rs  only_bench.rs  only_doc_test.rs  only_example.rs  only_test.rs
tests/data/arrays/: Cargo.toml
tests/data/arrays/src/: lib.rs
tests/data/assigns/: Cargo.toml
tests/data/assigns/src/: lib.rs
tests/data/benchmark_coverage/: Cargo.toml
tests/data/benchmark_coverage/src/: lib.rs
tests/data/boxes/: Cargo.toml
tests/data/boxes/src/: lib.rs
tests/data/breaks/: Cargo.toml
tests/data/breaks/src/: lib.rs
tests/data/build_script_fail/: Cargo.toml  build.rs
tests/data/cargo_bin_exe_runtime/: Cargo.toml
tests/data/cargo_bin_exe_runtime/src/: non_existent.rs
tests/data/cargo_bin_exe_runtime/tests/: runtime_env.rs
tests/data/cargo_config_env/: Cargo.toml
tests/data/cargo_config_env/.cargo/: config
tests/data/cargo_config_env/src/: lib.rs
tests/data/compile_fail/: Cargo.toml
tests/data/compile_fail/src/: lib.rs
tests/data/config_warnings/: Cargo.toml
tests/data/config_warnings/.cargo/: config
tests/data/configs/: Cargo.toml  tarpaulin.toml
tests/data/configs/src/: lib.rs
tests/data/continues/: Cargo.toml
tests/data/continues/src/: lib.rs
tests/data/crate_level_ignores/: Cargo.toml
tests/data/crate_level_ignores/workspace_1/: Cargo.toml
tests/data/crate_level_ignores/workspace_main/: Cargo.toml
tests/data/default_members/: Cargo.toml
tests/data/default_members/workspace_1/: Cargo.toml
tests/data/default_members/workspace_2/: Cargo.toml
tests/data/doc_coverage/: Cargo.toml
tests/data/doc_coverage/src/: lib.rs
tests/data/doctest/: Cargo.toml
tests/data/doctest/src/: lib.rs
tests/data/doctest_compile_fail_fail/: Cargo.toml
tests/data/doctest_compile_fail_fail/src/: lib.rs
tests/data/doctest_env/: Cargo.toml
tests/data/doctest_env/src/: lib.rs
tests/data/doctest_norun/: Cargo.toml
tests/data/doctest_norun/src/: lib.rs
tests/data/doctest_should_panic/: Cargo.toml
tests/data/doctest_should_panic/src/: lib.rs
tests/data/doctest_workspace_should_panic/: Cargo.toml
tests/data/doctest_workspace_should_panic/foo/: Cargo.toml
tests/data/doctest_workspace_should_panic/foo-bar/: Cargo.toml
tests/data/env_var/: Cargo.toml
tests/data/env_var/src/: main.rs
tests/data/env_var/tests/: env_var.rs
tests/data/example_test/: Cargo.toml
tests/data/failing_test/: Cargo.toml
tests/data/feature_gated_module/: Cargo.toml
tests/data/filter_inner_modules/: Cargo.toml
tests/data/follow_exe/: Cargo.toml  log
tests/data/follow_exec_issue966/: .tarpaulin.toml  Cargo.toml
tests/data/fork-test/: Cargo.toml  tarpaulin-run-2021-10-23T14:11:26.973751542+01:00.json
tests/data/futures/: Cargo.toml
tests/data/generic_tester/: Cargo.toml
tests/data/ifelse/: Cargo.toml
tests/data/issue1676/: Cargo.toml
tests/data/issue_610/: Cargo.toml
tests/data/kill_proc/: Cargo.toml
tests/data/kill_proc/src/: main.rs
tests/data/kill_proc/tests/: kill.rs
tests/data/lets/: Cargo.toml
tests/data/loops/: Cargo.toml
tests/data/matches/: Cargo.toml
tests/data/metatensor/: Cargo.toml  mestadata.json  metadata
tests/data/method_calls/: Cargo.toml
tests/data/module_name_clashes/: Cargo.toml
tests/data/multi_function_ta/: Cargo.toml
tests/data/multi_test_arts/: Cargo.toml
tests/data/multiple_rustflags/: Cargo.toml  tarpaulin.toml
tests/data/no_test_args/: Cargo.toml
tests/data/not_a_file.rs/: Cargo.toml
tests/data/paths/: Cargo.toml
tests/data/proc_macro/: Cargo.toml
tests/data/returns/: Cargo.toml
tests/data/run_coverage/: Cargo.toml
tests/data/rustflags/: Cargo.toml
tests/data/simple_project/: Cargo.toml
tests/data/sqlite-sys-test/: Cargo.toml
tests/data/stripped/: Cargo.toml
tests/data/structs/: Cargo.toml
tests/data/target_runner/: Cargo.toml
tests/data/tarpaulin_attrs/: Cargo.toml
tests/data/test_links/: Cargo.toml
tests/data/tool_attr/: Cargo.toml
tests/data/torch_test/: Cargo.toml
tests/data/untested_bin/: Cargo.toml
tests/data/workspace/: Cargo.toml
(+61 files in other folders)
