[package]
name = "cargo-tarpaulin"
version = "0.35.1"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "Cargo-Tarpaulin is a tool to determine code coverage achieved via tests"
repository = "https://github.com/xd009642/tarpaulin"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo", "cargo-subcommand", "testing"]
edition = "2018"
autotests = false
build = "build.rs"

[[bin]]
name = "cargo-tarpaulin"

[[test]]
name = "integration"
path = "tests/mod.rs"

[dependencies]
cargo_metadata = "0.23"
cfg-if = "1.0.4"
chrono = { version = "0.4", features = ["clock", "std"] }
clap = { version = "4.4.0", features = ["derive"] }
coveralls-api = { version = "0.7.0", optional = true }
gimli = { version = "0.32.3", default-features = false, features = ["read", "std"] }
git2 =  { version = "0.20", optional = true }
humantime-serde = "1"
indexmap = { version = "~1.8", features = ["serde-1"] }
llvm_profparser = { version = "0.10",  default-features = false }
object = "0.38"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quick-xml = "0.39"
quote = "1.0"
regex = "1.12"
rustc-demangle = "0.1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing"] }
toml = { version = "0.9", default-features = false, features = ["parse", "preserve_order", "std", "serde"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "env-filter",
    "fmt",
    "chrono",
    "ansi",
    "smallvec",
    "tracing-log",
] }
walkdir = "2.5.0"
glob = "0.3.3"
cargo-config2 = "0.1.39"

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
libc = "0.2.180"
nix = {version = "0.30.1", default-features = false, features = ["sched", "signal", "ptrace", "personality"]}
num_cpus = "1.17.0"
procfs = "0.18"

[features]
default = ["coveralls"]
coveralls = ["coveralls-api", "git2"]
vendored-openssl = ["git2/vendored-openssl", "coveralls"]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
lcov = "0.8.1"
rusty-fork = "0.3.1"
test-log = { version = "0.2.19", features = ["trace"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/cargo-tarpaulin-{ target }{ archive-suffix }"
bin-dir = "cargo-tarpaulin{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
codegen-units = 1
lto = true
