[package]
name = "kill_proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
hyper = "0.14.16"
nix = "0.23.1"
test_bin = "0.4.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

